more of terry's comments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -36,13 +36,13 @@
 
 
 \documentclass[10pt,fleqn,final]{scrreprt}
-
+% \documentclass[10pt,fleqn,draft]{scrreprt}
 
 
 \usepackage{changebar}
-
-% \newcommand{\cbs}[0]{\xspace}
-% \newcommand{\cbe}[0]{\xspace}
+ %
+ % \newcommand{\cbs}[0]{\xspace}
+ % \newcommand{\cbe}[0]{\xspace}
  \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace}
  \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace}
 
@@ -2241,15 +2241,15 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
     See \cite{circ1}, \cite{circ2}.
   \end{note}
 \cbs
-\termdefinition{freeness}{special type of closure, restriction to \termref{models} to those that are free (with respect to the local environment).}
+\termdefinition{freeness}{special type of closure, restriction of \termref{models} to those that are free (with respect to the local environment).}
   \begin{note}
-    In first-order-like logics, freeness means minimal interpretation
+    In first-order logic (and similar logics), freeness means minimal interpretation
     of predicates and minimal equality among data values. Freeness can
     be used for the specification of inductive datatypes like numbers,
     lists, trees, bags etc. In order to specify e.g.\ lists over some elements,
     the specification of the elements should be in the local environment.
   \end{note}
-\termdefinition{cofreeness}{special type of closure, restriction to \termref{models} to those that are cofree (with respect to the local environment).}
+\termdefinition{cofreeness}{special type of closure, restriction of \termref{models} to those that are cofree (with respect to the local environment).}
   \begin{note}
     In first-order-like logics, cofreeness means maximal
     interpretation of predicates and equality being observable
@@ -2258,11 +2258,11 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
   \end{note}
 \cbe
 
-  \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where \termref{non-logical symbol}s are shared according to the \termref{OMS mapping}s in the OMS network.}
+  \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where non-logical symbols are shared according to the OMS mappings in the OMS network.}
 \begin{example}
 Consider an ontology involving a concept \texttt{Person},
 and another one involving \texttt{Human being}, and an \termref{alignment}
-that relates these to concepts. In the combination of the ontologies
+that relates these\cbs two\cbe concepts. In the combination of the ontologies
 along the alignment, there is only one concept, representing both
 \texttt{Person} and \texttt{Human being}.
 \end{example}
