--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8851,9 +8851,16 @@ ModuleRelDefinition        = 'module-definition' , ModuleName , [ Conservative ]
 ModuleName           = IRI ;
 ModuleType           = 'module-type' , OMS , OMS ;
 
-AlignmentDefinition            = 'alignment-definition' , AlignmentName , [ AlignmentCardinality ] , AlignmentType, 
-                                    AlignmentSemantics,   { Correspondence } ; <\footnote{Note that this grammar uses ``type'' as in ``the type of a function'', whereas the Alignment API \cite{AlignmentAPI} uses ``type'' \cbs for\:  the\cbe totality/injectivity of the relation/function.  For the latter, this grammar uses ``cardinality''.}>
-AlignmentName            = IRI ;
+AlignmentDefinition  = 'alignment-definition' , AlignmentName ,
+                       [ AlignmentCardinalitys ] , AlignmentType,
+                       [ Correspondence , { ',' , Correspondence } ,
+                       [ 'assuming' , AlignmentSemantics ] ] ;<\footnote{%
+                        Note that this grammar uses ``type'' as in
+                        ``the type of a function'', whereas the Alignment API
+                        \cite{AlignmentAPI} uses ``type'' \cbs for\:  the\cbe
+                        totality/injectivity of the relation/function.  For the
+                        latter, this grammar uses ``cardinality''.}>
+AlignmentName        = IRI ;
 AlignmentCardinalitys           = AlignmentCardinalityForward , AlignmentCardinalityBackward ; 
 AlignmentCardinalityForward     = 'alignment-cardinality-forward' , AlignmentCardinality ;
 AlignmentCardinalityBackward    = 'alignment-cardinality-backward' , AlignmentCardinality ;
