Fix "AlignmentDefinition" in concrete syntax
There was only one error here, namely the fact that
"'assuming' , AlignmentSemantics" wasn't made optional.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4600,10 +4600,12 @@ ModuleRelDefinition        = 'module' , ModuleName , [ Conservative ] , ':' , Mo
 ModuleName           = IRI ;
 ModuleType           = GroupOMS , 'of' , GroupOMS ;
 
-AlignmentDefinition            = 'alignment' , AlignmentName , [ AlignmentCardinalitys ] , ':' , AlignmentType ,  'end'
-                     | 'alignment' , AlignmentName , [ AlignmentCardinalitys ] , ':' , AlignmentType , '=' ,
-                       Correspondence , { ',' , Correspondence } ,  
-                       'assuming' , AlignmentSemantics , 'end' ;
+AlignmentDefinition  = 'alignment' , AlignmentName ,
+                       [ AlignmentCardinalitys ] , ':' , AlignmentType , 'end'
+                     | 'alignment' , AlignmentName ,
+                       [ AlignmentCardinalitys ] , ':' , AlignmentType , '=' ,
+                       Correspondence , { ',' , Correspondence } ,
+                       [ 'assuming' , AlignmentSemantics ] , 'end' ;
 
 AlignmentName            = IRI ;
 AlignmentCardinalitys           = AlignmentCardinalityForward , AlignmentCardinalityBackward ;
