Make concrete "AlignmentDefinition" similar to abstract one
This makes it more concise and removes redundancies.

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4601,11 +4601,10 @@ ModuleName           = IRI ;
 ModuleType           = GroupOMS , 'of' , GroupOMS ;
 
 AlignmentDefinition  = 'alignment' , AlignmentName ,
-                       [ AlignmentCardinalitys ] , ':' , AlignmentType , 'end'
-                     | 'alignment' , AlignmentName ,
-                       [ AlignmentCardinalitys ] , ':' , AlignmentType , '=' ,
-                       Correspondence , { ',' , Correspondence } ,
-                       [ 'assuming' , AlignmentSemantics ] , 'end' ;
+                       [ AlignmentCardinalitys ] , ':' , AlignmentType ,
+                       [ '=' , Correspondence , { ',' , Correspondence } ,
+                       [ 'assuming' , AlignmentSemantics ] ] ,
+                       'end' ;
 
 AlignmentName            = IRI ;
 AlignmentCardinalitys           = AlignmentCardinalityForward , AlignmentCardinalityBackward ;
