--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -35,16 +35,16 @@
 % ]{scrreprt}
 
 
-\documentclass[10pt,fleqn,final]{scrreprt}
-% \documentclass[10pt,fleqn,draft]{scrreprt}
+ \documentclass[10pt,fleqn,final]{scrreprt}
+%\documentclass[10pt,fleqn,draft]{scrreprt}
 
 
 \usepackage{changebar}
  %
  % \newcommand{\cbs}[0]{\xspace}
  % \newcommand{\cbe}[0]{\xspace}
- \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace}
- \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace}
+  \newcommand{\cbs}[0]{\cbstart{}\color{red}\xspace}
+  \newcommand{\cbe}[0]{\cbend{}\color{black}\xspace}
 
 
 \usepackage{pdflscape}
@@ -2233,7 +2233,7 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
   \end{note}
   \begin{note}
     DOL supports four different forms of closure: minimization and
-    maximation (as explained above) as well as freeness and cofreeness
+    maximization as well as freeness and cofreeness
     (explained below).
   \end{note}
 \cbe
@@ -2241,6 +2241,13 @@ If a symbol is removed, all axioms containing that symbols are removed, too.
     See \cite{circ1}, \cite{circ2}.
   \end{note}
 \cbs
+
+\termdefinitionLight{\termref{minimization}} {form of closure that restricts the models to those that are minimal (with respect to the local environment).}
+\termdefinitionLight{\termref{minimization}} {form of closure that restricts the models to those that are maximal (with respect to the local environment).}
+
+
+
+
 \termdefinition{freeness}{special type of closure, restriction of \termref{models} to those that are free (with respect to the local environment).}
   \begin{note}
     In first-order logic (and similar logics), freeness means minimal interpretation
@@ -2479,7 +2486,10 @@ that targets specific applications or reasoning methods.}
     Serializations serve as standard formats for exchanging OMS between tools.
   \end{note}
   \begin{example}
-    OWL uses the term ``serialization''; the following are standard OWL serializations: OWL functional-style syntax, OWL/XML, OWL Manchester syntax, plus any standard serialization of RDF (\eg RDF/XML, Turtle, \dots).  However, RDF/XML is the only one tools are required to implement.
+    OWL uses the term ``serialization''; the following are standard OWL serializations: OWL
+	 functional-style syntax, OWL/XML, OWL Manchester syntax, plus any standard serialization of
+	 RDF (\eg RDF/XML, Turtle, \dots).\cbs  However, 
+	W3C specifications only require an RDF/XML implementation for OWL2 tools.\cbe  
   \end{example}
   \begin{example}
 Common Logic uses the term ``dialect''; the following are standard Common Logic dialects: Common Logic Interchange Format (CLIF), Conceptual Graph Interchange Format (CGIF), eXtended Common Logic Markup Language (XCL).
@@ -2525,10 +2535,11 @@ for the notions of
 and \termref{satisfaction}.\cbe}
 \cbs \begin{note}
 In order to support a broad range of 
-OMS languages and enable interoperability between them, 
-the semantics of \DOL needs to be defined in a way that abstracts from 
+OMS languages and enable interoperability between them,\cbs 
+the DOL semantics has to abstract from 
 the differences of the logic language aspects of  OMS languages. 
-Institutions provide such a framework. 
+Institutions provide a formal framework that enables this abstraction. 
+\cbe 
 \end{note} 
  \begin{note}
 The notion of institution uses \termref{category} theory for
@@ -2869,15 +2880,15 @@ The use of different OMS within the same context leads to  several
 challenges in the design and deployment of OMS, which have been addressed by current research in 
 ontological engineering, formal software specification and formal modeling:
 \begin{itemize}
-\item How \cbs is it possible \cbe to support shareability and reusability of OMS within the same domain?
-\item How \cbs is it possible \cbe to merge OMS in different domains, particularly in the cases 
+\item How\cbs is it possible\cbe to support shareability and reusability of OMS within the same domain?
+\item How\cbs is it possible\cbe to merge OMS in different domains, particularly in the cases 
 in which the OMS are axiomatized in different logical languages?
 \item What notions of modularity play a role when only part of an OMS is being shared or reused?
 \item What are the relationships between versions of an OMS axiomatized in different logical languages?
 \end{itemize}
 
 
-To illustrate these challenges, \cbs this clause presents \cbe a set of usage scenarios that involve the use of more than one OMS. These scenarios address the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
+To illustrate these challenges,\cbs this clause presents\cbe a set of usage scenarios that involve the use of more than one OMS. These scenarios address the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
  the use of multiple OMS leads to interoperability challenges. 
  %There  are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
 
@@ -3045,7 +3056,7 @@ alignment BFO2GFO :
 \end{lstlisting}
 
 
-\cbs \DOL combinations allows to combine ontologies, while taking into account the semantic dependencies given by the alignments.\cbe
+\cbs \DOL combinations allow to combine ontologies, while taking into account the semantic dependencies given by the alignments. In the following example the ontology \lstinline{Space} is defined as a combination of three different ontologies (BFO, GFO, DolceLite) along three alignments. \cbe
 
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
 ontology Space =
@@ -3344,11 +3355,12 @@ sense the diagrams need to be consistent, and check this by suitable tools.
 \ssclause{The ATM Example}
 \label{sec:atm-example}
 
-\cbs The ATM example is about \cbe model-driven development using UML,
-taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  It involves
+\cbs The ATM example, which illustrates model-driven development using UML,
+is taken from \cite{knapp-mossakowski-roggenbach:corr:2014}.  The example involves\cbe
 the design of a traditional automatic teller machine (ATM) connected
-to a bank. For simplicity, \cbs it focuses  only \cbe the handling of entering a
-card and a PIN with the ATM. After entering the card, one has three
+to a bank. For simplicity, \cbs the example focuses
+ on the ATM's processing of card and PIN entry actions.\cbe  
+After entering the card, one has three
 trials for entering the correct PIN (which is checked by the
 bank). After three unsuccessful trials the card is kept.
 
@@ -3595,14 +3607,18 @@ end
 
 
 \section{Conclusion}
+\cbs
+In this section, the use cases have been used to illustrate many aspects of DOL and how it can be useful in many situations in which different OMS artifacts might be leveraged and augmented to produce broader or more tractable models, ontologies, and specifications.
 
-\cbs The next sections present the metalanguage \DOL{}; in particular, the syntax and the model-theoretic semantics. Further, various features of \DOL will be discussed, which  are based on  best practices of modularity  across
- the three areas of ontology design, formal 
-specification, and model-driven development. \DOL 
-is designed to support of a wide range of formalisms and
-\cbe
+ \DOL is designed to support of a wide range of formalisms and
 provides the ability to specify the basis for formal interoperability even among heterogeneous OMS and OMS networks. \DOL enables the solutions of the problems described in the use cases above. It also enables the development of DOL documents, tools and workflows that 
 allow  a better exchange and reuse of OMS. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS.
+
+The next sections present the metalanguage \DOL{}; in particular, the syntax and the model-theoretic semantics. Further, various features of \DOL will be discussed, which  are based on  best practices of modularity  across
+ the three areas of ontology design, formal 
+specification, and model-driven development.
+\cbe
+
 
 
 \clauseI{Design Overview} \label{c:design}
