removed superfluous alternative in abstract syntax

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8904,7 +8904,7 @@ SymbolRef            = IRI ;
 GeneralizedTerm      = SymbolRef ;
 Relation          = RelationReference | StandardRelation ;
 StandardRelation = 'subsumes' | 'is-subsumed' | 'equivalent' | 'incompatible' 
-                     | 'has-instance' | 'instance-of' | 'default-relation' | IRI ; 
+                     | 'has-instance' | 'instance-of' | 'default-relation' ; 
 RelationReference = 'relation-ref' , IRI ;
 Confidence           = Double ;
 \end{lstlisting}
