inserted intermediate class

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8903,7 +8903,8 @@ CorrespondenceID     = IRI ;
 SymbolRef            = IRI ;
 GeneralizedTerm      = SymbolRef ;
 Relation          = RelationReference | StandardRelation ;
-StandardRelation = 'subsumes' | 'is-subsumed' | 'equivalent' | 'incompatible' 
+StandardRelation = StandardRelationValues ;
+StandardRelationValues = 'subsumes' | 'is-subsumed' | 'equivalent' | 'incompatible' 
                      | 'has-instance' | 'instance-of' | 'default-relation' ; 
 RelationReference = 'relation-ref' , IRI ;
 Confidence           = Double ;
