--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4626,8 +4626,8 @@ ModuleType           = GroupOMS , 'of' , GroupOMS ;
 
 AlignmentDefinition  = 'alignment' , AlignmentName ,
                        [ AlignmentCardinalityPair ] , ':' , AlignmentType ,
-                       [ '=' , Correspondence , { ',' , Correspondence } ,
-                       [ 'assuming' , AlignmentSemantics ] ] ,
+                       [ '=' , Correspondence , { ',' , Correspondence } ] ,
+                       [ 'assuming' , AlignmentSemantics ] ,
                        'end' ;
 
 AlignmentName            = IRI ;
