--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8870,8 +8870,7 @@ ModuleType           = 'module-type' , OMS , OMS ;
 
 AlignmentDefinition  = 'alignment-definition' , AlignmentName ,
                        [ AlignmentCardinalityPair ] , AlignmentType,
-                       [ Correspondence , { ',' , Correspondence } ,
-                       [ 'assuming' , AlignmentSemantics ] ] ; <\footnote{%
+                       { Correspondence } , [ AlignmentSemantics ] ; <\footnote{%
                         Note that this grammar uses ``type'' as in
                         ``the type of a function'', whereas the Alignment API
                         \cite{AlignmentAPI} uses ``type'' \cbs for\:  the\cbe
