proofread Fabian's implemetation of Terry's comments

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1040,7 +1040,7 @@ as documents written in some conforming language). See \ref{c:iris}.
 %
 6.6.1 & 
 Submissions may include additional languages  without a standardized model theory.	&
-This is left for future work.
+This has been left for forthcoming versions.
    \\ \hline
 %%
 6.6.2 & 
@@ -1905,8 +1905,7 @@ The converse is generalization.
 demonstrated to be a \termref{logical consequence} of the axioms.}
 
 \cbs
-  \termdefinition{theorem prover}{tool that\cbs attempts to prove that a given sentence is the logical consequence of some given set of axioms\cbe
-  \cbe\termref{theorems}.}
+  \termdefinition{theorem prover}{software tool that attempts to prove that a given sentence is the logical consequence of some given set of \termref{axioms} and \termref{theorems}.}
 \cbe
 
 
@@ -3056,7 +3055,7 @@ alignment BFO2GFO :
 \end{lstlisting}
 
 
-\cbs \DOL combinations allow to combine ontologies, while taking into account the semantic dependencies given by the alignments. In the following example the ontology \lstinline{Space} is defined as a combination of three different ontologies (BFO, GFO, DolceLite) along three alignments. \cbe
+\cbs \DOL can be used to combine ontologies, while taking into account the semantic dependencies given by the alignments. In the following example the ontology \lstinline{Space} is defined as a combination of three different ontologies (BFO, GFO, DolceLite) along three alignments. \cbe
 
 \begin{lstlisting}[basicstyle=\ttfamily\footnotesize,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,from},escapechar=@,mathescape]
 ontology Space =
@@ -3608,9 +3607,9 @@ end
 
 \section{Conclusion}
 \cbs
-In this section, the use cases have been used to illustrate many aspects of DOL and how it can be useful in many situations in which different OMS artifacts might be leveraged and augmented to produce broader or more tractable models, ontologies, and specifications.
+In this section, several use cases have been introduced. They illustrate many aspects of DOL and its usefulness in many situations in which different OMS artifacts might be leveraged and augmented to produce broader or more tractable models, ontologies, and specifications.
 
- \DOL is designed to support of a wide range of formalisms and
+ \DOL has been designed to support of a wide range of formalisms and
 provides the ability to specify the basis for formal interoperability even among heterogeneous OMS and OMS networks. \DOL enables the solutions of the problems described in the use cases above. It also enables the development of DOL documents, tools and workflows that 
 allow  a better exchange and reuse of OMS. Eventually, this will also lead to better, easier developed and maintained systems based on these OMS.
 
